--- a/static/index.html
+++ b/static/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html>
 <head>
-  <title>9 Piece</title>
+  <title>N-Puzzle Solver</title>
 
+  <link href="/css/lib/bootstrap.min.css" rel="stylesheet">
+  <link href="/css/lib/bootstrap-theme.min.css" rel="stylesheet">
+  <link href="/css/lib/animate.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
 
   <script src="/js/lib/jquery.js"></script>
@@ -10,19 +13,52 @@
   <script src="/js/lib/backbone.js"></script>
 </head>
 <body>
-  <div class="puzzle js-puzzle">
-    <div class="controls">
-      <button class="js-solve">Solve</button>
-      <button class="js-shuffle">Shuffle</button>
-      <label>theme:
-        <select class="js-theme">
-          <option value="cat">Cat</option>
-          <option value="dog">Dog</option>
-          <option value="nature">Nature</option>
-        </select>
-      </label>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">N-Puzzle Solver</a>
+      </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/leaderboards">Leaderboards</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="tiles"></div>
+  </nav>
+
+  <div class="container">
+    <div class="puzzle js-puzzle">
+      <div class="controls">
+        <div class="row">
+          <div class="btn-group col-sm-6">
+            <button class="btn btn-primary js-solve">Solve</button>
+            <button class="btn btn-default js-shuffle">
+              <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
+            </button>
+          </div>
+          <div class="form-group col-sm-4 col-sm-offset-2">
+            <form class="form-inline">
+              <div class="form-group">
+                <label class="control-label">theme:</label>
+                <select class="form-control js-theme">
+                  <option value="cat">Cat</option>
+                  <option value="dog">Dog</option>
+                  <option value="nature">Nature</option>
+                </select>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="tiles js-tiles"></div>
+    </div>
   </div>
 
   <script>
