--- a/static/index.html
+++ b/static/index.html
@@ -12,49 +12,24 @@
   <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
         <a class="navbar-brand" href="/">N-Puzzle Solver</a>
       </div>
-      <div id="navbar" class="collapse navbar-collapse">
+      <div id="navbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/leaderboards">Leaderboards</a></li>
+          <li class="js-nav-home">
+            <a href="/">Home</a>
+          </li>
+          <li class="js-nav-leaderboard">
+            <a href="/leaderboard">Leaderboard</a>
+          </li>
         </ul>
       </div>
     </div>
   </nav>
 
   <div class="container">
-    <div class="puzzle js-puzzle">
-      <div class="controls">
-        <div class="row">
-          <div class="btn-group col-sm-6">
-            <button class="btn btn-primary js-solve">Solve</button>
-            <button class="btn btn-default js-shuffle">
-              <span class="glyphicon glyphicon-random" aria-hidden="true"></span>
-            </button>
-          </div>
-          <div class="form-group col-sm-4 col-sm-offset-2">
-            <form class="form-inline">
-              <div class="form-group">
-                <label class="control-label">theme:</label>
-                <select class="form-control js-theme">
-                  <option value="cat">Cat</option>
-                  <option value="dog">Dog</option>
-                  <option value="nature">Nature</option>
-                </select>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="tiles js-tiles"></div>
-    </div>
+    <div class="puzzle js-puzzle"></div>
+    <div class="leaderboard js-leaderboard"></div>
   </div>
 
   <script>
@@ -62,12 +37,15 @@
       paths: {
         jquery: 'lib/jquery',
         underscore: 'lib/underscore',
-        backbone: 'lib/backbone'
+        backbone: 'lib/backbone',
+        handlebars: 'lib/handlebars',
+        text: 'lib/require/text'
       },
       shim: {
         jquery: { exports: 'jQuery' },
         underscore: { exports: '_' },
-        Backbone: { exports: 'Backbone' }
+        backbone: { exports: 'Backbone' },
+        handlebars: { exports: 'Handlebars' }
       }
     };
   </script>
